*gnome-mpv-0.5 (23 Aug 2015)

  23 Aug 2015; Poncho <poncho@spahan.ch> +gnome-mpv-0.5.ebuild,
  -gnome-mpv-0.4.ebuild:
  media-video/gnome-mpv: version bump

  22 May 2015; Poncho <poncho@spahan.ch> gnome-mpv-9999.ebuild:
  media-video/gnome-mpv: use gnome2_schemas_update

*gnome-mpv-0.4 (16 May 2015)

  16 May 2015; Poncho <poncho@spahan.ch> +gnome-mpv-0.4.ebuild,
  -gnome-mpv-0.3.ebuild:
  media-video/gnome-mpv: version bump

  19 Mar 2015; Poncho <poncho@spahan.ch> gnome-mpv-9999.ebuild:
  media-video/gnome-mpv: gnome-mpv.desktop is fixed upstream

*gnome-mpv-0.3 (14 Mar 2015)
*gnome-mpv-9999 (14 Mar 2015)

  14 Mar 2015; Poncho <poncho@spahan.ch> +gnome-mpv-0.3.ebuild,
  +gnome-mpv-9999.ebuild, +metadata.xml:
  media-video/gnome-mpv: new ebuild