@@ -1,1 +1,1 @@
-DIST gnome-mpv-0.5.tar.gz 52996 SHA256 56064c16fb9a8b4e79cdd338800dd989588bed11574e4993a36308707e304cf3 SHA512 fbcb46a9260d787fec4516ea45f9b8315c59b25fd3dc7891fc8222b1f62c3eb9826cf8ec7625ee92754df918df60b3e265d343c3e6b4d4ea8dcf19ec7817bd08 WHIRLPOOL e5b932275d0f9d3d387bf252a3bc6d3742fb13a3c912d99e5c010a23f03edd4c380bc2fa8551fc76b6469226352ff44c5406651bb239e9dd4f5760e5aca4bcde
+DIST gnome-mpv-0.6.tar.gz 58270 SHA256 e1544c5b2055cc0a92af625b87f53422e05dbe39043c5d5b3d6db1a75e3435c0 SHA512 af3254a4f8ef045d6a70fc836659e2ac3edf1c7c65c0402adaa7ebaa6a5052e73738964b31a51fc5cfd994383661b80ae23e1195abbc79ac67189639a55b9fac WHIRLPOOL 5b7e5a2ceba6f105ad021383d6d61c0896e4ed1edcf0d2b102eb5f907283538cdfb5c0cf152e2a091bed72f51ddfa48b285bb8190fd7a3b40c120fc54f83ce97
